clean best practices

--- a/best-practices.mdx
+++ b/best-practices.mdx
@@ -163,7 +163,10 @@ NamedQuery(
         Book.short_description: "0s"
     },
     owner="mary.shelley@aol.com",
-    description="Return a condensed view of a book, including its title, author, year, and short description."
+    description=((
+        "Return a condensed view of a book, including its title, author, "
+        "year, and short description."
+    ))
 )
 ```
 
