--- a/best-practices.mdx
+++ b/best-practices.mdx
@@ -208,7 +208,7 @@ To see all the named queries you've defined in your current active deployment, y
 chalk named-query list
 ```
 
-If you want to create multiple versions of a similar queries, you can use the version parameter of the NamedQuery object
+If you want to create multiple versions of a similar queries, you can use the [version](/api-docs#NamedQuery.__init__.version) parameter of the NamedQuery object
 and the [query_name_version](/api-docs#ChalkClient.query.query_name_version) parameter of our various clients.
 
 ---
