--- a/feature-version-tutorial.mdx
+++ b/feature-version-tutorial.mdx
@@ -84,7 +84,7 @@ def resolver_2(id: Animal.id) -> Animal.sound:
 2. [`chalk apply --branch test`](/cli/apply#branch) to deploy.
 3. Now try querying without a version, and resolver_2 will get executed.
 ```bash
-$ chalk query --in animal.id=Cow --out animal.sounda --branch test
+$ chalk query --in animal.id=Cow --out animal.sound --branch test
 ```
 ---
 
