add dropped word

--- a/features.mdx
+++ b/features.mdx
@@ -206,7 +206,7 @@ IDs are [auto-assigned](/docs/features#primary-keys) based
 on the name provided to `feature(name=...)`.
 
 ## Default feature values
-For features that can't be computed, you can pass `default` to 
+For features that can't always be computed, you can pass `default` to 
 [`feature`](/api-docs#feature.default), or assign a default directly:
 
 ```python
