--- a/changelog.mdx
+++ b/changelog.mdx
@@ -5,6 +5,18 @@ description: Updates to Chalk!
 
 ---
 
+## August 26, 2024
+
+### View aggregation backfills in the dashboard
+
+We recently added some tools for [managing windowed aggregations](/docs/aggregations#managing-aggregations). Now, you
+can see the results of [`aggregate backfill`](/cli/aggregate_backfill) commands in the Chalk dashboard under the
+Aggregations page.
+
+Check it out to see what resolvers were run for a backfill, the
+backfill's status, and other details that will help you drill down to investigate performance. Let us know if you'd like
+to set up your account with aggregations if you're not already using them.
+
 ## August 19, 2024
 
 ### Execute queries by name
