--- a/changelog.mdx
+++ b/changelog.mdx
@@ -9,13 +9,12 @@ description: Updates to Chalk!
 
 ### View aggregation backfills in the dashboard
 
-We recently added some tools for [managing windowed aggregations](/docs/aggregations#managing-aggregations). Now, you
-can see the results of [`aggregate backfill`](/cli/aggregate_backfill) commands in the Chalk dashboard under the
-Aggregations page.
+We added a new Aggregations page to the dashboard where you can see the results of [`aggregate
+backfill`](/cli/aggregate_backfill) commands. Check it out to see what resolvers were run for a backfill, the backfill's
+status, and other details that will help you drill down to investigate performance. 
 
-Check it out to see what resolvers were run for a backfill, the
-backfill's status, and other details that will help you drill down to investigate performance. Let us know if you'd like
-to set up your account with aggregations if you're not already using them.
+For more details on aggregate backfills, see our documentation on [managing windowed
+aggregations](/docs/aggregations#managing-aggregations).
 
 ## August 19, 2024
 
