--- a/changelog.mdx
+++ b/changelog.mdx
@@ -5,6 +5,19 @@ description: Updates to Chalk!
 
 ---
 
+## September 9, 2024
+
+### Feature catalog shows associated named queries
+
+In the [August 19](/docs/changelog#queries-can-reference-multiple-feature-namespaces) changelog entry, we announced
+[`NamedQuery`](/api-docs#NamedQuery), a tool for naming your queries so that you can execute them without writing out
+the full query definition.
+
+This week, we've updated the dashboard's feature catalog so that it shows which named queries
+reference a given feature as input or output.
+
+![Feature catalog showing links to named queries a feature is an input or output of](/img/feature_catalog_named_queries.png)
+
 ## August 26, 2024
 
 ### View aggregation backfills in the dashboard
